Adding notes for error during build
Signed-off-by: Davis Benny <davis.benny@intel.com>